syntax = "proto3";

package ai.metathings.service.deviced;
option go_package = "deviced";

import "google/protobuf/wrappers.proto";
import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";

import "github.com/nayotta/metathings/pkg/proto/identityd2/model.proto";
import "github.com/nayotta/metathings/pkg/proto/constant/state/device.proto";
import "github.com/nayotta/metathings/pkg/proto/constant/kind/device.proto";
import "github.com/nayotta/metathings/pkg/proto/constant/state/module.proto";

message Device {
	string id = 1;
	ai.metathings.constant.kind.DeviceKind kind = 2;
	ai.metathings.constant.state.DeviceState state = 3;
	string name = 4;
	string alias = 5;
	repeated Module modules = 6;
	google.protobuf.Timestamp heartbeat_at = 7;
	repeated Flow flows = 8;
}

message OpDevice {
	google.protobuf.StringValue id = 1;
	ai.metathings.constant.kind.DeviceKind kind = 2;
	ai.metathings.constant.state.DeviceState state = 3;
	google.protobuf.StringValue name = 4;
	google.protobuf.StringValue alias = 5;
	repeated OpModule modules = 6;
	google.protobuf.Timestamp heartbeat_at = 7;
	repeated OpFlow flows = 8;
}

message Module {
	string id = 1;
	ai.metathings.constant.state.ModuleState state = 2;
	string device_id = 3;
	string endpoint = 4;
	string component = 5;
	string name = 6;
	string alias = 7;
	google.protobuf.Timestamp heartbeat_at = 8;
}

message OpModule {
	google.protobuf.StringValue id = 1;
	ai.metathings.constant.state.ModuleState state = 2;
	google.protobuf.StringValue device_id = 3;
	google.protobuf.StringValue endpoint = 4;
	google.protobuf.StringValue component = 5;
	google.protobuf.StringValue name = 6;
	google.protobuf.StringValue alias = 7;
	google.protobuf.Timestamp heartbeat_at = 8;
}

message Flow {
	string id = 1;
	string device_id = 2;
	string name = 3;
	string alias = 4;
}

message OpFlow {
	google.protobuf.StringValue id = 1;
	google.protobuf.StringValue device_id = 2;
	google.protobuf.StringValue name = 3;
	google.protobuf.StringValue alias = 4;
}

message Frame {
	google.protobuf.Timestamp ts = 1;
	google.protobuf.Struct data = 2;
}

message OpFrame {
	google.protobuf.Timestamp ts = 1;
	google.protobuf.Struct data = 2;
}

message Object {
	Device device = 1;
	string prefix = 2;
	string name = 3;
	int64 length = 4;
	string etag = 5;
	google.protobuf.Timestamp last_modified = 6;
	map<string, string> metadata = 7;
}

message OpObject {
	OpDevice device = 1;
	google.protobuf.StringValue prefix = 2;
	google.protobuf.StringValue name = 3;
	google.protobuf.Int64Value length = 4;
	google.protobuf.StringValue etag = 5;
	google.protobuf.Timestamp liast_modified = 6;
	map<string, google.protobuf.StringValue> metadata = 7;
}

message ErrorValue {
	string name = 1;
	string service_name = 2;
	string method_name = 3;
	string context = 4;
}

message OpUnaryCallValue {
	google.protobuf.StringValue name = 1;
	google.protobuf.StringValue component = 2;
	google.protobuf.StringValue method = 3;
	google.protobuf.Any value = 4;
}

message UnaryCallValue {
	string name = 1;
	string component = 2;
	string method = 3;
	google.protobuf.Any value = 4;
}

message OpStreamCallValue {
	oneof union {
		google.protobuf.Any value = 1;
		OpStreamCallConfig config = 2;
		OpStreamCallConfigAck config_ack = 3;
		OpStreamCallExit exit = 4;
	}
}

message StreamCallValue {
	oneof union {
		google.protobuf.Any value = 1;
		StreamCallConfig config = 2;
		StreamCallConfigAck config_ack = 3;
		StreamCallExit exit = 4;
	}
}

message OpStreamCallConfig {
	google.protobuf.StringValue name = 1;
	google.protobuf.StringValue component = 2;
	google.protobuf.StringValue method = 3;
}

message StreamCallConfig {
	string name = 1;
	string component = 2;
	string method = 3;
}

message OpStreamCallConfigAck {}
message StreamCallConfigAck {}

message OpStreamCallExit {}
message StreamCallExit {}
