syntax = "proto3";

package ai.metathings.component;
option go_package = "github.com/nayotta/metathings/proto/component";

import "google/protobuf/wrappers.proto";
import "google/protobuf/any.proto";

message UnaryCallRequest {
	google.protobuf.StringValue method = 1;
	google.protobuf.Any value = 2;
}

message UnaryCallResponse {
	string method = 1;
	google.protobuf.Any value = 2;
}
